--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,30 +11,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Island+Moments&family=Lobster&family=Open+Sans+Condensed:wght@300&family=Pacifico&family=Permanent+Marker&family=Shadows+Into+Light&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="title">
-            <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nostrum suscipit perspiciatis, sequi at ex, harum reiciendis alias enim minima inventore, quos consequuntur adipisci non veniam placeat ab asperiores. Blanditiis ab maxime tempore saepe iusto? Blanditiis tempora debitis mollitia qui, vel expedita iure dignissimos dolorem itaque et. Dignissimos veniam autem exercitationem doloremque error tenetur omnis neque quis cupiditate rerum illum delectus, optio eius repellat corrupti blanditiis voluptatem soluta, id pariatur? Laborum ut sint obcaecati impedit, aut cupiditate a quaerat dolore nobis temporibus quos amet omnis magnam. Debitis, odio aliquam? Consectetur harum quae exercitationem eveniet sunt qui necessitatibus? Dicta, voluptas autem distinctio culpa aperiam voluptates odit! Eaque nulla, voluptatem dolor maxime, enim culpa facilis et sed eos modi adipisci, dolores suscipit qui quo ratione exercitationem accusamus quidem beatae ipsa sequi doloribus? Dolorem corrupti optio, enim, praesentium vero repudiandae consequatur fugit blanditiis facere nisi eligendi molestias officia atque. Beatae, nisi. Eaque commodi neque sed dolores ducimus quasi cum provident nisi harum aut qui iusto unde totam alias amet quibusdam similique voluptates autem, doloribus distinctio nostrum esse? Odit ipsam, voluptas et quia a quas repellat quasi animi dignissimos fuga amet ab doloremque quod repellendus eos quibusdam at hic voluptatum nisi voluptatibus nihil minima. Vitae ad hic repudiandae voluptatum mollitia ratione totam. Velit sed eum, ad distinctio tenetur, error accusamus magni quibusdam dolor neque illo, quos eaque. Temporibus architecto nulla deleniti ipsa blanditiis nesciunt nihil harum sunt? Illum!</p>
-                <h1 class="t1"> I am Saalim</h1>
-                    <h2>A <u> web</u> developer.</h2>
-               </div>
-        
+            <p class="hidden">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia beatae voluptas repellendus architecto quo debitis impedit odio rerum! Sequi recusandae ab cum et possimus suscipit quae sit, enim beatae id. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Beatae totam porro quia quas! Ipsa molestiae repudiandae fugit quas, veniam quia voluptatum illo, nostrum fugiat quisquam excepturi neque in distinctio cumque! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit tempora
+                soluta eum hic aspernatur quod doloremque explicabo! Amet ipsa ipsam quam tenetur deleniti sint provident obcaecati facilis odit. Excepturi, dolor! Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nostrum suscipit perspiciatis,
+                sequi at ex, harum reiciendis alias enim minima inventore, quos consequuntur adipisci non veniam placeat ab asperiores. Blanditiis ab maxime tempore saepe iusto? Blanditiis tempora debitis mollitia qui, vel expedita iure dignissimos dolorem
+                itaque et. Dignissi Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet nihil officia totam sapiente quidem id voluptatem saepe vero. Modi voluptate neque architecto sunt ducimus velit beatae it! Eaque nulla, voluptatem ducimus
+                quasi cum provident nisi harum aut qui iusto unde totam alias amet qibusdam similique voluptates autem, doloribus ecto nulla deleniti ipsa blanditiis nesciunt nihil harum sunt? Illum!</p>
+            <h1 class="t1"> I am Saalim</h1>
+            <h2>A <u> web</u> developer.</h2>
+        </div>
+
         <div class="mountain">
             <img src="Images/cloud.png" alt="first-cloud" class="cloud first-cloud">
             <img src="Images/cloud.png" alt="second-cloud" class="cloud second-cloud">
             <img src="Images/mountain.png" alt="mountain" class="myt">
         </div>
     </header>
-
+    <nav>
+        <a href="#" class="nv1">HOME</a>
+        <a href="#intro" class="nv2">INTRO</a>
+        <a href="#skills" class="nv3">MY SKILLS</a>
+        <a href="#contact" class="nv4">CONTACT ME</a>
+    </nav>
     <main>
         <section class="sec1">
-            <img src="Images/salim.png" alt="Saalim" class="salim">
+            <img src="Images/salim.png" alt="Saalim" class="salim" id="intro">
             <h2>Assalamu Alaikum</h2>
-            <p>I am a web developer who loves to make big projects to practice a good path without any stubborn skills. I am a great lover of tea so you can say that I am chaywaala like Modiji</p>
+            <p class="p1">I am a web developer who loves to make big projects to practice a good path without any stubborn skills. I am a great lover of tea so you can say that I am chaywaala like Modiji</p>
         </section>
         <hr>
         <section class="sec2">
-            <h2>My Skills</h2>
+            <h2 id="skills">My Skills</h2>
             <div>
                 <img src="Images/computer.png" alt="Design & Development" class="design">
                 <h3>Design & Development</h3>
@@ -47,9 +60,9 @@
         </section>
         <hr>
         <section class="sec3">
-            <h3>Get in touch
-            </h3>
-            <p>If you love the way of doing these things as I do and really interested to get in touch with me, You can do this for sure,I will be super happy to <em> respond</em></p>  
+            <h2 id="contact">Get in touch
+            </h2>
+            <p class="p3">If you love the way of doing these things as I do and really interested to get in touch with me, You can do this for sure,I will be super happy to <em> respond</em></p>
             <a href="contact.js" class="button">Contact Me</a>
         </section>
     </main>
@@ -64,4 +77,5 @@
         </div>
     </footer>
 </body>
+
 </html>
