--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
             </div>
         </section>
         <hr>
+        <section class="nwsec">
+            <h2>How Can I Help</h2>
+            <p class="p2">Hello! I am a web developer, Ohh! Not a proper one, I learned to make static websites only. I am learning a lot & lot to learn dynamic front-end and also back-end so you can say that if I take my force to extreme mode,I can learn it very fast.
+                You can see that this website is very good for design purpose,so I can help you to make beautiful static websites with the use of only light coding languages and libraries as HTML,CSS,BOOTSTRAP,TAILWIND CSS etc... So,If your budget is
+                tight and you also wanna do a business fight,You can definitely make a contact with me.
+            </p>
+        </section>
+        <hr>
         <section class="sec3">
             <h2 id="contact">Get in touch
             </h2>
