--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
             <h2 id="contact">Get in touch
             </h2>
             <p class="p3">If you love the way of doing these things as I do and really interested to get in touch with me, You can do this for sure,I will be super happy to <em> respond</em></p>
-            <a href="contact.js" class="button">Contact Me</a>
+            <a href="contact.html" class="button">Contact Me</a>
         </section>
+
     </main>
     <footer>
         <div class="links-footer">
