--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Mood badal gaya mera mujhe nahi karna contact wontact</h1>
+    <h1>Mood changed, I don't want to contact now. LOL</h1>
 </body>
 
 </html>
