--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="sec1">
             <img src="Images/salim.png" alt="Saalim" class="salim" id="intro">
             <h2>Assalamu Alaikum</h2>
-            <p class="p1">I am a web developer who loves to make big projects to practice a good path without any stubborn skills. I am a great lover of tea so you can say that I am chaywaala like Modiji</p>
+            <p class="p1">I am a web developer who loves to make big projects to practice a good path without any stubborn skills. I am a great lover of tea and always welcome hard challenges in my life.</p>
         </section>
         <hr>
         <section class="sec2">
@@ -50,27 +50,26 @@
             <div>
                 <img src="Images/computer.png" alt="Design & Development" class="design">
                 <h3>Design & Development</h3>
-                <p>There is nothing something special in my <em> Design & Development career</em>, I only did it 1091 times in <strong>Google</strong></p>
+                <p>There is nothing something special in my <em> Design & Development career</em>, but I have enough UI/UX skills to build any web app on a full-stack scale</p>
             </div>
             <div>
                 <img src="Images/chillies.png" alt="Challenge" class="challenge">
                 <h3>Challenges</h3>
-                <p>We did it a lot in past, we really enjoyed doing this and these challenges really cherish my skills to the next level.</p>
+                <p>I love facing challenges as they help me grow in my life. I had faced a lot of challenges in my development career.</p>
             </div>
         </section>
         <hr>
         <section class="nwsec">
             <h2>How Can I Help</h2>
-            <p class="p2">Hello! I am a web developer, Ohh! Not a proper one, I learned to make static websites only. I am learning a lot & lot to learn dynamic front-end and also back-end so you can say that if I take my force to extreme mode,I can learn it very fast.
-                You can see that this website is very good for design purpose,so I can help you to make beautiful static websites with the use of only light coding languages and libraries as HTML,CSS,BOOTSTRAP,TAILWIND CSS etc... So,If your budget is
-                tight and you also wanna do a business fight,You can definitely make a contact with me.
+            <p class="p2">Hello! I am a web developer. I am learning a lot of front-end and also back-end, so you can say that if I'm on extreme mode.
+                You can see this website is very good for design purpose, so I can help you to make beautiful static websites with the use of only light coding languages and libraries as HTML,CSS,BOOTSTRAP,TAILWIND etc. You can definitely contact me when needed.
             </p>
         </section>
         <hr>
         <section class="sec3">
             <h2 id="contact">Get in touch
             </h2>
-            <p class="p3">If you love the way of doing these things as I do and really interested to get in touch with me, You can do this for sure,I will be super happy to <em> respond</em></p>
+            <p class="p3">If you love the way of doing things like I do and really want to collabarate with me, I will be super happy to <em> respond</em></p>
             <a href="contact.html" class="button">Contact Me</a>
         </section>
 
